add setting description

--- a/hello-spring/src/main/resources/application.properties
+++ b/hello-spring/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.jpa.hibernate.ddl-auto=update
+# DataBase 연결 설정 - url / username / password 설정 필요
 spring.datasource.url=jdbc:mysql://test-mysql.cywn7h0g0nth.us-east-2.rds.amazonaws.com:3306/admin
 spring.datasource.username=admin
 spring.datasource.password=11111111
